kubernetes-async-com-service-mesh/kubernetes/istio/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
  namespace: devops-mahir-submission-3-ns
spec:
  hosts:
    - "*"
  gateways:
    - order-gateway
  http:
    - match:
        - uri:
            exact: /order
      route:
        - destination:
            host: order.devops-mahir-submission-3-ns.svc.cluster.local
            port:
              number: 3000
